--- a/css/main.css
+++ b/css/main.css
@@ -22,5 +22,21 @@ header a {
   font-size: 1.5rem;
 }
 
+img {
+  width: 100%;
+}
+
+figcaption {
+  font-family: 'PT Serif', serif;
+  font-size: 0.8rem;
+  font-style: italic;
+  text-align: center;
+}
+
+main p:first-of-type {
+  font-family: 'PT Serif', serif;
+  font-weight: bold;
+}
+
 /*font-family: 'PT Sans', sans-serif;
 font-family: 'PT Serif', serif;
